--- a/src/styles/components/sidebarchat.css
+++ b/src/styles/components/sidebarchat.css
@@ -29,7 +29,7 @@
   background-color: var(--bg-light-color) !important;
 }
 
-@media screen and (prefers-color-scheme: dark) {
+body[data-theme="dark-mode"] {
   .sidebar-chat {
     background-color: var(--bg-dark-color);
   }
